Weitere Interfaces hinzugefuegt.